cmake_minimum_required(VERSION 3.22...3.27)

project(Deciphering_oop_with_cpp_book VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# set(EXE_CH_1_EX_1 ch_1_ex_1)
# set(EXE_CH_1_EX_2 ch_1_ex_2)
# set(EXE_CH_1_ACT_1 ch_1_act_1)
# set(EXE_CH_1_ACT_2 ch_1_act_2)

add_subdirectory(exercises_activities_chapter_1)

