# set(EXE_SOURCE_1
#     exercise_1.cpp)

# set(EXE_SOURCE_2
#     exercise_2.cpp)

# set(EXE_SOURCE_3
#     activity_1.cpp)

# set(EXE_SOURCE_4
#     activity_2.cpp)

# add_executable(${EXE_CH_1_EX_1} ${EXE_SOURCE_1})
# add_executable(${EXE_CH_1_EX_2} ${EXE_SOURCE_2})
# add_executable(${EXE_CH_1_ACT_1} ${EXE_SOURCE_3})
# add_executable(${EXE_CH_1_ACT_2} ${EXE_SOURCE_4})
